--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "type": "commonjs",
   "scripts": {
     "start": "node .",
-    "server": "nodemon ."
+    "server": "nodemon .",
+    "create": "ng new client",
+    "client-install": "npm install --prifix client",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "keywords": [],
+  "keywords": [
+    "express",
+    "angular"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/cli": "^11.0.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -25,6 +33,7 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "nodemon": "^2.0.6"
   }
 }
